# tuna

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: auto-tag.yml  release.yml
.trae/skills/harness-design/: SKILL.md
assets/: deck.jsonl  enrichment.jsonl  morphemes.jsonl
docs/: README.md  architecture.md  backlog.md  conventions.md  data-pipeline.md  decisions.md
packaging/homebrew/: tuna.rb
scripts/: bake.py  enrich.py  narrate.py
sidecar/: synth.py
src/: assets.rs  config.rs  main.rs  paths.rs  setup.rs
src/audio/: coreaudio.rs  mod.rs  player.rs  probe.rs  tts.rs
src/audio/tts/: kokoro.rs  kokoro_zh.rs  matcha.rs  mod.rs  piper.rs  session.rs
src/data/: deck.rs  mod.rs  scheduler.rs  schema.rs
src/llm/: enrich.rs  mod.rs  socratic.rs
src/ui/: app.rs  cmdmenu.rs  mod.rs  settings.rs  theme.rs  view.rs
