[package]
name = "tuna"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/gtoxlili/tuna"
homepage = "https://github.com/gtoxlili/tuna"
description = "终端里的考研英语词根推导学习工具"

[dependencies]
anyhow = "1.0.103"
chrono = "0.4.45"
clap = { version = "4.6.1", features = ["derive"] }
# TTS via sherpa-onnx — statically linked C++ lib (build script fetches prebuilt
# archives from GitHub releases). Covers Kokoro/Matcha/Piper under one OfflineTts API.
sherpa-onnx = "1.13.3"
# Pure-Rust tar.bz2 extraction for sherpa model tarballs in the setup wizard.
tar = "0.4"
bzip2 = "0.5"
ratatui = "0.30.2"
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "json", "default-tls"] }
rodio = "0.22.2"
rs-fsrs = "1.2.1"
rusqlite = { version = "0.40.1", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
tui-markdown = { version = "0.3.8", default-features = false }

# macOS-only: CoreAudio HAL gives the UID + transport fourcc that disambiguate
# AirPods HFP/A2DP duplicates — cpal 0.17 can't. Gated so Linux/Windows builds drop them.
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10.1"
coreaudio-sys = "0.2.18"

# Production build. Whole-program optimization for a finished-product binary.
[profile.release]
opt-level = 3        # max runtime optimization
lto = "fat"          # whole-program LTO across every crate (incl. ort/ratatui/rusqlite)
codegen-units = 1    # one unit → the optimizer sees everything, no cross-unit blind spots
strip = "symbols"    # drop the symbol table + debuginfo (smaller binary)
panic = "unwind"     # DELIBERATE: the TUI restores the terminal while unwinding on panic;
                     # "abort" would skip Drop guards and leave the terminal wrecked.
